example/secondfile/objects/Apttus_Proposal__Proposal__c.object
<CustomObject>
    <fields>
        <fullName>AIA_Type__c</fullName>
        <label>AIA Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_IPQ_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag will be checked for quotes created by IPQ.</description>
        <label>API IPQ Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASE_MACD_Deal__c</fullName>
        <formula>Apttus_Proposal__Opportunity__r.ASE_MACD_Deal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASE MACD Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <label>Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bulk_Add_Token_Batch_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Add Token Batch Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bulk_Sevice_Availability_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Sevice Availability Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Address_Line_1__c</fullName>
        <label>Business Address Line 1</label>
        <length>95</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Address_Line_2__c</fullName>
        <label>Business Address Line 2</label>
        <length>95</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyflow_Step__c</fullName>
        <label>Buyflow Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add Customer</fullName>
                    <default>true</default>
                    <label>Add Customer</label>
                </value>
                <value>
                    <fullName>Add Product</fullName>
                </value>
                <value>
                    <fullName>Add Sites</fullName>
                </value>
                <value>
                    <fullName>Configure Sites</fullName>
                </value>
                <value>
                    <fullName>Review Quote</fullName>
                </value>
                <value>
                    <fullName>ConfigProd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CR Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaptureDealHashid__c</fullName>
        <label>CaptureDealHashid</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaptureOpptyforMACD__c</fullName>
        <label>CaptureOpptyforMACD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Deal_Hash__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Renewal Deal Hash</label>
        <referenceTo>Deal_Hash__c</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealHash__c</fullName>
        <formula>RelatedPremise__r.DealHash__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DealHash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Registration_Expire_Date__c</fullName>
        <description>Returns current date plus 6 months.</description>
        <formula>IF 
( 
MONTH( TODAY() ) &gt; 6 
, 
DATE 
( 
YEAR( TODAY() ) + 1, 
MOD( MONTH( TODAY() ) + 6 , 12 ), 
DAY( TODAY() ) 
) 
, 
DATE 
( 
YEAR( TODAY() ), 
MONTH( TODAY() ) + 6, 
DAY( TODAY() ) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns current date plus 6 months.</inlineHelpText>
        <label>Deal Registration Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Denial_Reason__c</fullName>
        <label>Denial Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Envelope__c</fullName>
        <label>Docusign Envelope</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_for_RDS__c</fullName>
        <formula>IF(AND(NOT(Renewal_Contract__c),OR(Product__r.ProductCode == &quot;AVPN&quot;,Product__r.ProductCode == &quot;AMIS&quot;,Product__r.ProductCode == &quot;Attwireless&quot;,Product__r.ProductCode == &quot;AIA&quot;)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible for RDS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndCustomerCity__c</fullName>
        <description>EndCustomerCity</description>
        <formula>End_Customer__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>EndCustomerCity</inlineHelpText>
        <label>EndCustomerCity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndCustomerMailingStreetAddress__c</fullName>
        <formula>End_Customer__r.Mailing_Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndCustomerMailingStreetAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndCustomerName__c</fullName>
        <description>EndCustomerName</description>
        <formula>End_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>EndCustomerName</inlineHelpText>
        <label>EndCustomerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndCustomerState__c</fullName>
        <formula>End_Customer__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndCustomerState</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndCustomerZip__c</fullName>
        <description>EndCustomerZip</description>
        <formula>End_Customer__r.Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>EndCustomerZip</inlineHelpText>
        <label>EndCustomerZip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Name__c</fullName>
        <formula>End_Customer__r.Name</formula>
        <label>End Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Customer</label>
        <referenceTo>End_Customer__c</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ethernet_Configuration__c</fullName>
        <description>This field is updated on Product Selection Page</description>
        <label>Ethernet Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ethernet Private Line (Point-to-Point)</fullName>
                </value>
                <value>
                    <fullName>Ethernet Virtual Private Line (Hub-and-Spoke)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_time_ASE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First time ASE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPFlexTNCPage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IPFlexTNCPage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPQ_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IPQ Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBIDMigrationCompleted__c</fullName>
        <description>For tracking BID Migration Completion (Technical Field)</description>
        <formula>Apttus_Proposal__Opportunity__r.isBIDMigrationCompleted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For tracking BID Migration Completion (Technical Field)</inlineHelpText>
        <label>IsBIDMigrationCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Offline_Config_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for handling Bulk Site offline config process</description>
        <label>Is Offline Config Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lowest_Promotion_Expiry_Date__c</fullName>
        <label>Lowest Promotion Expiry Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACDMasterTier__c</fullName>
        <description>Field for storing MACD Master Tier</description>
        <formula>IF (contains( Apttus_QPConfig__PriceListId__r.Name,&quot;Platinum Elite&quot;),&quot;Gold&quot;,
IF (contains(Apttus_QPConfig__PriceListId__r.Name,&quot;GOLD&quot;),&quot;Gold&quot;,
IF (contains(Apttus_QPConfig__PriceListId__r.Name,&quot;Master Agent&quot;),&quot;Silver&quot;,
IF (contains(Apttus_QPConfig__PriceListId__r.Name,&quot;Silver&quot;),&quot;Silver&quot;,
IF (contains(Apttus_QPConfig__PriceListId__r.Name,&quot;Platinum&quot;),&quot;Platinum&quot;,NULL
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MACD Master Tier</inlineHelpText>
        <label>MACD Master Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Change_Type__c</fullName>
        <label>MACD Change Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MasterOpportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proposals (Opportunity)</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <formula>Apttus_Proposal__Opportunity__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Quote</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Quotes/Proposals</relationshipLabel>
        <relationshipName>Quotes_Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premier_Order_ID__c</fullName>
        <externalId>true</externalId>
        <label>Premier Order ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Expiration_Date__c</fullName>
        <formula>Apttus_Proposal__Opportunity__r.Price_Expiration_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Status_Backend__c</fullName>
        <externalId>true</externalId>
        <label>Pricing Status Backend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Status__c</fullName>
        <formula>IF(OR(Product_Name__c = &apos;AT&amp;T Virtual Private Network&apos;,Product_Name__c = &apos;AT&amp;T Managed Internet Service&apos;), IF( (TODAY()&lt;= Price_Expiration_Date__c) , &apos;Price Locked&apos;, &apos;Price Not Locked&apos;), &apos;&apos;)</formula>
        <label>Pricing Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProdCode__c</fullName>
        <formula>IF (contains( Apttus_QPConfig__PriceListId__r.Name,&quot;MIS&quot;),&quot;MIS&quot;,IF (contains(Apttus_QPConfig__PriceListId__r.Name,&quot;AVPN&quot;),&quot;AVPN&quot;,
IF (contains(Apttus_QPConfig__PriceListId__r.Name,&quot;ASE&quot;),&quot;ASE&quot;,&apos;&apos;
) 
)
)</formula>
        <label>ProdCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_New_Name__c</fullName>
        <formula>Product__r.Product_New_Name__c</formula>
        <label>Product New Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Apttus_Config2__ConfigurationType__c</field>
                <operation>equals</operation>
                <value>Bundle</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion_Simulation_Date__c</fullName>
        <description>Promotion Simulation Date</description>
        <label>Promotion Simulation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProposalName__c</fullName>
        <formula>Apttus_Proposal__Proposal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProposalName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteExpirationDate__c</fullName>
        <label>Quote Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteExpired__c</fullName>
        <description>US725685 :  Created for internal usage</description>
        <formula>if(
AND (
	ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName, &apos;Expired&apos;),
	TODAY() - Apttus_Proposal__Opportunity__r.Quote_Expiration_Date__c &gt;= 30
	),
true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuoteExpired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Expiration_Date__c</fullName>
        <formula>Apttus_Proposal__Opportunity__r.Quote_Expiration_Date__c</formula>
        <label>Quote Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_State__c</fullName>
        <label>Quote State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Type_Backend__c</fullName>
        <externalId>true</externalId>
        <label>Quote Type Backend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <formula>IF(OR(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Draft&apos;), ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Bulk Service Availability Requested&apos;), ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Bulk Service Availability Completed&apos;),ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Deleted&apos;),ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Cancellation Order Completed&apos;),ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Pending Cancel&apos;),ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Cancelled&apos;),AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Pricing Schedule Requested&apos;),ISBLANK(Apttus_Proposal__Opportunity__c)),AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Deal Reg Approved&apos;),ISBLANK(Apttus_Proposal__Opportunity__c)),AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Pending Deal Reg&apos;),ISBLANK(Apttus_Proposal__Opportunity__c)),AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Processing Renewal&apos;),ISBLANK(Apttus_Proposal__Opportunity__c))),&apos;Quote&apos;,
IF(OR(AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Pending Deal Reg&apos;), ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Deal Registration Requested&apos;)),ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Technical Review Denied&apos;),ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Technical Review Approved&apos;),ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Technical Review Requested&apos;),AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Deal Reg Denied&apos;),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Deal Registration Denied&apos;)),AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c ,&apos;Deal Reg Approved&apos;),NOT(ISBLANK(Apttus_Proposal__Opportunity__c))),AND(ISPICKVAL( Apttus_Proposal__Approval_Stage__c ,&apos;Pending Deal Reg&apos;),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Cancelled&apos;)),AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Deleted&apos;),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Deal Registration Deleted&apos;)),AND(OR(ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName, &apos;Deal Registration Approved&apos;),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName , &apos;Deal Reg Auto-Approved&apos;)),ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Special Pricing Requested&apos;)),AND(ISPICKVAL( Apttus_Proposal__Approval_Stage__c,&apos;Special Pricing Denied&apos;)),AND(ISPICKVAL( Apttus_Proposal__Approval_Stage__c,&apos;Special Pricing Approved&apos;))),&apos;Deal Registration&apos;,
IF(OR(AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;SP Approval Requested&apos;),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Pricing Schedule Pending&apos;)),AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;SP Approval Requested&apos;),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Deal Reg Auto-Approved&apos;)),AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Pricing Schedule Requested&apos;),NOT(ISBLANK(Apttus_Proposal__Opportunity__c))),AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Pending Additional Site Details&apos;),OR(ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Order Submitted&apos;),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Pricing Schedule Approved&apos;),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Pricing Schedule Requested&apos;))),AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Order Submitted&apos;),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Order Submitted&apos;)),AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Completed&apos;)),AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Expired&apos;)),AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Pending Deal Reg&apos;),OR(ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Pricing Schedule Requested&apos;),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Order Submitted&apos;),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Saved&apos;),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Deal Reg Auto-Approved&apos;))),ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Order Submitted&apos;),ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;SP Approval Request Denied&apos;)),&apos;Orders&apos;,
&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Site_Status__c</fullName>
        <label>RDS Site Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>NotCompleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Card_Effective_Date__c</fullName>
        <label>Rate Card Effective Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Stability_Date__c</fullName>
        <label>Rate Stability Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RelatedPremise__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To hold premise Id</description>
        <label>RDS-Premise Details</label>
        <referenceTo>RDS_Premise_Details__c</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Quote</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Proposals (RelatedQuote)</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related End Customer</label>
        <referenceTo>Related_End_Customer__c</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RetrialFailure__c</fullName>
        <description>US799054 - Alternate Access  | Enter Address | ITS Ticket Creation</description>
        <label>Retrial Failure</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Address_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Address Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_Email__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SP Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Status_Backend__c</fullName>
        <description>This field is used for storing the SP Status Value for Dashboard</description>
        <externalId>true</externalId>
        <label>SP Status Backend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Status__c</fullName>
        <formula>IF(OR(ISPICKVAL( Apttus_Proposal__Approval_Stage__c,&apos;Special Pricing Approved&apos;), ISPICKVAL( Apttus_Proposal__Approval_Stage__c,&apos;Special Pricing Denied&apos;)),&apos;Accepted&apos;, 
IF(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Special Pricing Requested&apos;),&apos;Pending&apos;, 
IF(AND(ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Deal Reg Auto-Approved&apos;),Renewal_Contract__c,CR_Approved__c),&apos;Ready for Review – Renewal&apos;,
IF(OR(ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Saved&apos;),ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Draft&apos;)),&apos;Saved&apos;, 
IF(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Expired&apos;),&apos;Expired&apos;, 
IF(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Completed&apos;),&apos;Completed&apos;, 
IF(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Cancelled&apos;),&apos;Cancelled&apos;, 
IF(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Cancellation Order Completed&apos;),&apos;Cancellation Order Completed&apos;, 
IF(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Pending Cancel&apos;),&apos;Pending Cancel&apos;, 
IF(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Deleted&apos;),&apos;Deleted&apos;, 
IF(OR(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;SP Approval Request Denied&apos;),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Deal Registration Denied&apos;),ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Technical Review Denied&apos;)),&apos;Review Denied&apos;, 
IF(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Technical Review Approved&apos;), &apos;Review Approved&apos;, 
IF(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Technical Review Requested&apos;), &apos;Review Requested&apos;, 
IF(AND(ISPICKVAL( Apttus_Proposal__Approval_Stage__c,&apos;Order Submitted&apos;), MACD_Change_Type__c != &apos;&apos;),&apos;Submitted&apos;, 
IF(AND(ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Pricing Schedule Pending&apos;), ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;SP Approval Requested&apos;)),&apos;Pending Approval&apos;, 
IF(Renewal_Contract__c,&apos;Processing - Renewal&apos;, 
IF(AND(OR(ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Deal Reg Auto-Approved&apos;),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Deal Registration Approved&apos;),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Pricing Schedule Requested&apos;)),ISPICKVAL(Apttus_Proposal__Approval_Stage__c , &apos;Deal Reg Approved&apos;)),&apos;Accepted&apos;, 
IF(OR(AND(OR(ISPICKVAL( Apttus_Proposal__Opportunity__r.StageName,&apos;Deal Registration Approved&apos;),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Deal Reg Auto-Approved&apos;)),ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Special Pricing Requested&apos;)),ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Deal Registration Pending&apos;),ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Pending Deal Reg&apos;)),&apos;Pending&apos;, 
IF(AND(ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Pricing Schedule Requested&apos;), ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Pricing Schedule Requested&apos;)),&apos;Approved&apos;, 
IF(AND( ISPICKVAL(Apttus_Proposal__Opportunity__r.StageName,&apos;Deal Reg Auto-Approved&apos;), ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;SP Approval Requested&apos;)),&apos;Pending Approval&apos;, 
IF(AND(ISPICKVAL( Apttus_Proposal__Opportunity__r.StageName,&apos;Order Submitted&apos;), ISPICKVAL(Apttus_Proposal__Approval_Stage__c ,&apos;Pending Additional Site Details&apos;)),&apos;Pending Additional Site Details&apos;, 
IF(AND(ISPICKVAL( Apttus_Proposal__Opportunity__r.StageName,&apos;Order Submitted&apos;), ISPICKVAL(Apttus_Proposal__Approval_Stage__c ,&apos;Order Submitted&apos;),Eligible_for_RDS__c =True),&apos;Submitted&apos;, 
IF(AND(ISPICKVAL( Apttus_Proposal__Opportunity__r.StageName,&apos;Order Submitted&apos;), ISPICKVAL(Apttus_Proposal__Approval_Stage__c ,&apos;Order Submitted&apos;),Eligible_for_RDS__c =False),&apos;Active&apos;, 
IF(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Bulk Service Availability Requested&apos;),&apos;Processing&apos;, 
IF(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&apos;Bulk Service Availability Completed&apos;),&apos;Ready for Review&apos;,
&apos;&apos;)))))))))))))))))))))))))</formula>
        <label>SP Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email_on_Rate_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email on Rate Refresh Stage Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email_on_Service_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email on Service Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteRemovalCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SiteRemovalCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Quote_Expiration_Date__c</fullName>
        <label>Site Quote Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Status__c</fullName>
        <label>Site Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Configured</fullName>
                </value>
                <value>
                    <fullName>NotConfigured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StopApprovalEmailOnDiscard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>StopApprovalEmailOnDiscard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubAccountNumber__c</fullName>
        <description>For capturing sub account number on Quote</description>
        <label>Sub-Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <formula>Left(TEXT( Apttus_Proposal__Payment_Term__c),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Bulk_Service_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Token Bulk Service Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Traffic_Jurisdiction__c</fullName>
        <description>This is used in the Product Selection Page</description>
        <label>Traffic Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interstate</fullName>
                </value>
                <value>
                    <fullName>Intrastate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VASA_Validation_Indicator__c</fullName>
        <label>VASA Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Validation Required</fullName>
                    <default>true</default>
                    <label>Validation Required</label>
                </value>
                <value>
                    <fullName>Validation Failed</fullName>
                </value>
                <value>
                    <fullName>Validation Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wireline_Promotions_at_Deal_Reg_LevelOld__c</fullName>
        <label>Wireline Promotions at Deal Reg LevelOld</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotions_at_Deal_Reg_Level__c</fullName>
        <label>Wireline Promotions at Deal Reg Level</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotions_at_SP_Order_LevelOld__c</fullName>
        <label>Wireline Promotions at SP Order LevelOld</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotions_at_SP_Order_Level__c</fullName>
        <label>Wireline Promotions at SP Order Level</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>applyAllFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>applyAllFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eSign_Request_Id__c</fullName>
        <label>eSign Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isRateRefreshBatchProcessing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRateRefreshBatchProcessing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vasa_modeA_request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>vasa_modeA_request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vasa_modeB_request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>vasa_modeB_request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vasa_modeD_request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>vasa_modeD_request</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>